--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,13 @@
 
 <link href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap" rel="stylesheet">
 
-  <meta property="og:title" content="HaCked By Lynch">
+  <meta property="og:title" content="HaCkeD By Lynch">
 
 <meta name="description" content="Serbs were here">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
  <meta property="og:description" content="Serbs were here">
 
-<meta property="og:image" content="https://scontent.fbeg6-1.fna.fbcdn.net/v/t1.18169-9/10408076_1642798945972878_2043345406766444094_n.jpg?_nc_cat=101&ccb=1-5&_nc_sid=973b4a&_nc_ohc=xumQLscIk5gAX_IdRvf&_nc_ht=scontent.fbeg6-1.fna&oh=00_AT--mT9AcN6S_oX-y5ngjPvdEuNgpWcYBqMBx2x_lWoFsg&oe=620C0F5C">
+<meta property="og:image" content="https://animesher.com/orig/0/72/728/7283/animesher.com_kaneki-amazing-anime-gif-728332.gif">
 
 
 <table width=100% height=100%><td align="center">
